--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,1 +1,46 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Fira+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/hero.css">
+</head>
+<body>
+    <!-- #region hero -->
+    <section class="hero">
+         <div class="conteiner"  >
+            <div class="hero-main-div">
+                <h1 class="main-title">EcoTote — Стиль, що не шкодить планеті</h1>
+                <div class="hero-nested-div">
+                    <p class="hero-txt">Екологічні сумки для тих, хто дбає про майбутнє. Обирайте стиль та відповідальність разом з EcoTote.</p>
+                    <a class="btn-buy-now" href="#assortment">Купити зараз</a>
+                </div>
+            </div>
+                <picture class="hero-picture">
+                    <source
+                        media="(min-width: 1440px)"
+                        srcset="./img/hero/hero-desktop.jpg 1x, ./img/hero/hero-desktop2x.jpg 2x"
+                    />
 
+                    <source
+                        media="(min-width: 768px)"
+                        srcset="./img/hero/hero-tablet.jpg 1x, ./img/hero/hero-tablet2x.jpg 2x"
+                    />
+
+                    <img
+                        src="./img/hero/hero-mobile.jpg"
+                        srcset="./img/hero/hero-mobile.jpg 1x, ./img/hero/hero-mobile2x.jpg 2x"
+                        alt="bags"
+                        class="hero-image"
+                    />
+                </picture>
+        </div>
+    </section>
+    <!-- #endregion hero -->
+</body>
+</html>
