--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -1,43 +1,55 @@
+ul,
+ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+}
 
 /* СЕКЦІЯ */
 .feedbacks-section {
-    background-color: #EBF8ED; 
-    max-width: 1440px;
-    padding: 64px;
-    display: flex;
-    align-items: center;
+    max-width: 320px;
+    padding: 32px 16px;
     margin: 0 auto;
+    background-color: #EBF8ED;
 }
 
 /* КОНТЕЙНЕР */
 .feedbacks-container {
-    max-width: 1312px;
+    max-width: 288px;
     margin: 0 auto;
 }
 
 /* ЗАГОЛОВОК */
 .feedbacks-name-block {
     font-weight: 700;
-    font-size: 48px;
+    font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.01em;
     text-align: center;
     color: #030A06;
     font-family: "Montserrat", sans-serif;
-    margin-bottom: 80px;
+    margin-bottom: 32px;
 }
 
 /* СПИСОК КАРТОК */
 .feedbacks-client-list {
-    display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    gap: 24px;
+    gap: 40px;
 }
 
-/* ОДИН КЛІЄНТ (li) */
 .feedbacks-item {
-    width: calc((100% - 72px) / 4);
+    width: 100%;
 }
 
 /* КАРТКА ВСЕРЕДИНІ */
@@ -54,7 +66,7 @@
     gap: 4px;
     list-style: none;
     padding: 0;
-    margin: 0 0 24px 0;
+    margin: 0 0 12px 0;
 }
 
 .star-icon {
@@ -74,7 +86,7 @@
     line-height: 1.4;
     letter-spacing: 0.01em;
     color: #030A06;
-    margin: 0 0 24px 0;
+    margin: 0 0 12px 0;
     flex-grow: 1;
 }
 
@@ -85,4 +97,85 @@
     line-height: 160%;
     color: #030A06;
     margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+    /* СЕКЦІЯ */
+    .feedbacks-section {
+        max-width: 768px;
+        padding: 64px 32px;
+    }
+
+    /* КОНТЕЙНЕР */
+    .feedbacks-container {
+        max-width: 704px;
+    }
+
+    /* СПИСОК КАРТОК */
+    .feedbacks-client-list {
+        display: flex; 
+        flex-wrap: wrap;
+        justify-content: center;
+        gap: 32px 24px;
+    }
+
+    /* ОДИН КЛІЄНТ (li) */
+    .feedbacks-item {
+        width: calc((100% - 24px) / 2);
+    }
+
+    /* ЗІРКИ */
+    .feedbacks-star-list { 
+        margin: 0 0 24px 0;
+    }
+
+    /* КАРТКА ВСЕРЕДИНІ */
+    .feedbacks-card {
+        width: 100%;
+    }
+
+    /* ТЕКСТ ВІДГУКУ */
+    .feedbacks-text {
+        margin: 0 0 24px 0;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+
+    /* СЕКЦІЯ */
+    .feedbacks-section {
+        max-width: 1440px;
+        padding: 64px;
+    }
+
+    /* КОНТЕЙНЕР */
+    .feedbacks-container {
+        max-width: 1312px;
+    }
+
+    /* ЗАГОЛОВОК */
+    .feedbacks-name-block {
+        font-size: 48px;
+        margin-bottom: 80px;
+    }
+
+    /* СПИСОК КАРТОК */
+    .feedbacks-client-list {
+        gap: 24px;
+    }
+
+    /* ОДИН КЛІЄНТ (li) */
+    .feedbacks-item {
+        width: calc((100% - 72px) / 4);
+    }
+
+    /* ЗІРКИ */
+    .feedbacks-star-list {
+        margin: 0 0 24px 0;
+    }
+
+    /* ТЕКСТ ВІДГУКУ */
+    .feedbacks-text {
+        margin: 0 0 24px 0;
+    }
 }
