--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -6,27 +6,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag1.jpg  1x, 
-            ../img/assortment-img/assortment-bag1@2x.jpg 2x
+            /img/assortment-img/assortment-bag1.jpg  1x, 
+            /img/assortment-img/assortment-bag1@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag1-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag1@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag1-tab.jpg  1x,
+            /img/assortment-img/assortment-bag1@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag1-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag1@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag1-mob.jpg  1x,
+            /img/assortment-img/assortment-bag1@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag1-mob.jpg"
+           src="/img/assortment-img/assortment-bag1-mob.jpg"
            alt="EcoBag Classic"
           />
          </picture>
@@ -39,27 +39,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag2.jpg  1x,
-            ../img/assortment-img/assortment-bag2@2x.jpg 2x
+            /img/assortment-img/assortment-bag2.jpg  1x,
+            /img/assortment-img/assortment-bag2@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag2-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag2@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag2-tab.jpg  1x,
+            /img/assortment-img/assortment-bag2@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag2-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag2@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag2-mob.jpg  1x,
+            /img/assortment-img/assortment-bag2@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag2-mob.jpg"
+           src="/img/assortment-img/assortment-bag2-mob.jpg"
            alt="EcoTote Shopper"
           />
          </picture>
@@ -72,27 +72,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag3.jpg  1x,
-            ../img/assortment-img/assortment-bag3@2x.jpg 2x
+            /img/assortment-img/assortment-bag3.jpg  1x,
+            /img/assortment-img/assortment-bag3@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag3-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag3@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag3-tab.jpg  1x,
+            /img/assortment-img/assortment-bag3@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag3-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag3@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag3-mob.jpg  1x,
+            /img/assortment-img/assortment-bag3@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag3-mob.jpg"
+           src="/img/assortment-img/assortment-bag3-mob.jpg"
            alt="EcoBackpack Urban"
           />
          </picture>
@@ -105,27 +105,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag4.jpg  1x,
-            ../img/assortment-img/assortment-bag4@2x.jpg 2x
+            /img/assortment-img/assortment-bag4.jpg  1x,
+            /img/assortment-img/assortment-bag4@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag4-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag4@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag4-tab.jpg  1x,
+            /img/assortment-img/assortment-bag4@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag4-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag4@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag4-mob.jpg  1x,
+            /img/assortment-img/assortment-bag4@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag4-mob.jpg"
+           src="/img/assortment-img/assortment-bag4-mob.jpg"
            alt="EcoCrossbody Mini"
           />
          </picture>
@@ -138,27 +138,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag5.jpg  1x,
-            ../img/assortment-img/assortment-bag5@2x.jpg 2x
+            /img/assortment-img/assortment-bag5.jpg  1x,
+            /img/assortment-img/assortment-bag5@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag5-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag5@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag5-tab.jpg  1x,
+            /img/assortment-img/assortment-bag5@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag5-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag5@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag5-mob.jpg  1x,
+            /img/assortment-img/assortment-bag5@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag5-mob.jpg"
+           src="/img/assortment-img/assortment-bag5-mob.jpg"
            alt="EcoLunch Bag"
           />
          </picture>
@@ -171,27 +171,27 @@
         <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag6.jpg  1x,
-            ../img/assortment-img/assortment-bag6@2x.jpg 2x
+            /img/assortment-img/assortment-bag6.jpg  1x,
+            /img/assortment-img/assortment-bag6@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag6-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag6@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag6-tab.jpg  1x,
+            /img/assortment-img/assortment-bag6@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag6-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag6@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag6-mob.jpg  1x,
+            /img/assortment-img/assortment-bag6@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag6-mob.jpg"
+           src="/img/assortment-img/assortment-bag6-mob.jpg"
            alt="EcoBeach Tote"
           />
          </picture>
@@ -204,27 +204,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag7.jpg  1x,
-            ../img/assortment-img/assortment-bag7@2x.jpg 2x
+            /img/assortment-img/assortment-bag7.jpg  1x,
+            /img/assortment-img/assortment-bag7@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag7-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag7@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag7-tab.jpg  1x,
+            /img/assortment-img/assortment-bag7@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag7-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag7@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag7-mob.jpg  1x,
+            /img/assortment-img/assortment-bag7@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag7-mob.jpg"
+           src="/img/assortment-img/assortment-bag7-mob.jpg"
            alt="EcoTravel Duffle"
           />
          </picture>
@@ -237,27 +237,27 @@
          <picture>
           <source
            srcset="
-            ../img/assortment-img/assortment-bag8.jpg  1x,
-            ../img/assortment-img/assortment-bag8@2x.jpg 2x
+            /img/assortment-img/assortment-bag8.jpg  1x,
+            /img/assortment-img/assortment-bag8@2x.jpg 2x
            "
            media="(min-width: 1440px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag8-tab.jpg  1x,
-            ../img/assortment-img/assortment-bag8@2x-tab.jpg 2x
+            /img/assortment-img/assortment-bag8-tab.jpg  1x,
+            /img/assortment-img/assortment-bag8@2x-tab.jpg 2x
            "
            media="(min-width: 768px)"
           />
           <source
            srcset="
-            ../img/assortment-img/assortment-bag8-mob.jpg  1x,
-            ../img/assortment-img/assortment-bag8@2x-mob.jpg 2x
+            /img/assortment-img/assortment-bag8-mob.jpg  1x,
+            /img/assortment-img/assortment-bag8@2x-mob.jpg 2x
            "
            media="(max-width: 767px)"
           />
           <img
-           src="../img/assortment-img/assortment-bag8-mob.jpg"
+           src="/img/assortment-img/assortment-bag8-mob.jpg"
            alt="EcoKids Bag"
           />
          </picture>
