--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,6 +1,6 @@
    <!-- #region hero -->
     <section class="hero">
-         <div class="conteiner"  >
+         <div class="container"  >
             <div class="hero-main-div">
                 <h1 class="main-title">EcoTote — Стиль, що не шкодить планеті</h1>
                 <div class="hero-nested-div">
@@ -11,17 +11,17 @@
                 <picture class="hero-picture">
                     <source
                         media="(min-width: 1440px)"
-                        srcset="/img/hero-section/hero-desktop.jpg 1x, /img/hero-section/hero-desktop2x.jpg 2x"
+                        srcset="/img/hero-section/hero-banner-desktop.jpg 1x, /img/hero-section/hero-banner-desktop2x.jpg 2x"
                     />
 
                     <source
                         media="(min-width: 768px)"
-                        srcset="/img/hero-section/hero-tablet.jpg 1x, /img/hero-section/hero-tablet2x.jpg 2x"
+                        srcset="/img/hero-section/hero-banner-tablet.jpg 1x, /img/hero-section/hero-banner-tablet2x.jpg 2x"
                     />
 
                     <img
                         src="./img/hero/hero-mobile.jpg"
-                        srcset="/img/hero-section/hero-mobile.jpg 1x, /img/hero-section/hero-mobile2x.jpg 2x"
+                        srcset="/img/hero-section/hero-banner-mobile.jpg 1x, /img/hero-section/hero-banner-mobile2x.jpg 2x"
                         alt="Набір бавовняних еко-сумок різних кольорів: молочна, бежева та зелена"
                         class="hero-image"
                     />
