--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -13,23 +13,17 @@
 	letter-spacing: 0.01em;
 	color: #030a06;
 	margin-bottom: 20px;
+	font-family: "Comfortaa", sans-serif;
 }
 .hero-nested-div{
 
 }
 .hero-txt{
-	font-size: 16px;
-	font-family: "Fira Sans", sans-serif;
-	line-height: 26px; 
 	line-height: 1.6;
 	color: #030a06;
 	margin-bottom: 24px;
 }
 .btn-buy-now{
-	font-weight: 400;
-	font-size: 16px;
-	text-decoration: none;
-	line-height: 26px; 
 	line-height: 1.6;
 	color: #fff;
 	background-color: #030a06;
