--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         height="39"
         aria-label="Логотип EcoTote"
       >
-        <use href="./src/img/logo-icon.svg"></use>
+        <use href="/src/img/logo-icon.svg"></use>
       </svg>
     </a>
     <nav class="main-nav">
