--- a/src/css/about.css
+++ b/src/css/about.css
@@ -30,10 +30,7 @@
     line-height: 1.2;
     letter-spacing: 0.01em;
     text-align: center;
-    color: #fff;
-    margin-bottom: 20px;
-    max-width: 629px;
-    margin: 0 auto;
+   
 }
 .feature-p {
     font-family: "Fira Sans", sans-serif;
@@ -59,7 +56,7 @@
       url('../img/about/bg-features-tablet.jpg') 1x,
       url('../img/about/bg-features-tablet@2x.jpg') 2x
     );
-
+}
 
 .tagline {
     margin-bottom: 16px;
@@ -68,15 +65,15 @@
     margin-bottom: 24px;
 }
 .feature-p {
-   max-width: 573px;
+   max-width: 500px;
    margin: 0 auto;
 }
 }
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1440px) {
 
 .feature {
-    padding: 112px 36px 94px;
+    padding: 112 336px 94px;
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
