--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         height="39"
         aria-label="Логотип EcoTote"
       >
-        <use href="./img/logo-icon.svg#logo-icon"></use>
+        <use href="/img/logo-icon.svg#logo-icon"></use>
       </svg>
     </a>
     <nav class="main-nav">
@@ -44,7 +44,7 @@
       data-menu-open
     >
       <svg class="burger-menu-icon" width="28" height="28">
-        <use href="./img/icons.svg#burger-icon"></use>
+        <use href="/img/icons.svg#burger-icon"></use>
       </svg>
     </button>
   </div>
@@ -59,7 +59,7 @@
           height="39"
           aria-label="Логотип EcoTote"
         >
-          <use href="./img/logo-icon.svg#logo-icon"></use>
+          <use href="/img/logo-icon.svg#logo-icon"></use>
         </svg>
       </a>
       <button
@@ -69,7 +69,7 @@
         data-menu-close
       >
         <svg width="16" height="16">
-          <use href="./img/icons.svg#close-icon"></use>
+          <use href="/img/icons.svg#x-icon-close"></use>
         </svg>
       </button>
 
@@ -102,3 +102,4 @@
   </div>
 </header>
 <script src="./src/menu.js"></script>
+<!-- =============== END HEADER =============== -->
