--- a/src/css/about.css
+++ b/src/css/about.css
@@ -73,7 +73,7 @@
 @media screen and (min-width: 1440px) {
 
 .feature {
-    padding: 112 336px 94px;
+    padding: 112px 336px 94px;
     max-width: 1440px;
     background-repeat: no-repeat;
     background-position: center;
