--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -11,7 +11,7 @@
     </div>
 
 <ul class="ul-list-layout">
-    <div class="ul-list-2img"> 
+     
     <li class="li-list-layout">
         <picture> 
             <source media="(min-width: 1440px)" srcset="/img/img-layout/organic-dex.jpg 1x, /img/img-layout/organic-dex@2x.jpg 2x">
@@ -30,11 +30,11 @@
             <source media="(max-width: 767px)" srcset="/img/img-layout/strenght-mobile.jpg 1x, /img/img-layout/strenght-mobile@2x.jpg 2x">
         <img class="list-img-layout" src="/img/img-layout/strenght-mobile.jpg" alt="Sturdy bag">
         </picture>
-        <h3 class="list-title-layout">Міцність i довговічність</h3>
+        <h3 class="list-title-layout list-title-layout-strenght">Міцність i довговічність</h3>
         <p class="list-description-layout">Наші сумки мають посилені шви для тривалого використання.</p>
     </li>
-    </div>
-<div class="ul-list-1img"> 
+    
+
     <li class="li-list-layout">
         <picture>
             <source media="(min-width: 1440px)" srcset="/img/img-layout/style-dex.jpg 1x, /img/img-layout/style-dex@2x.jpg 2x">
@@ -45,7 +45,7 @@
         <h3 class="list-title-layout">Стильний та сучасний дизайн</h3>
         <p class="list-description-layout">Мінімалістичні моделі в обмежених серіях для кожного стилю.</p>
     </li>
-    </div>
+   
 </ul>
 </div>
     </section>
