--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,17 +1,13 @@
 <footer class="footer">
   <div class="footer__inner">
-
-    <!-- ========= CONTENT ========= -->
+    <!-- CONTENT -->
     <div class="footer__content">
-
       <!-- ЛОГОТИП -->
       <a class="footer-logo" href="./index.html">
-  <svg class="footer-logo__img">
-    <use href="./img/logo-icon.svg#logo-icon"></use>
-  </svg>
-</a>
-
-
+        <svg class="footer-logo__img" aria-label="EcoTote logo">
+          <use href="./img/logo-icon.svg#logo-icon"></use>
+        </svg>
+      </a>
 
       <!-- МЕНЮ -->
       <nav class="footer-nav">
@@ -28,22 +24,22 @@
       <!-- СОЦМЕРЕЖІ -->
       <ul class="footer-socials">
         <li>
-          <a href="https://www.instagram.com/" class="footer-socials__link" target="_blank">
-            <svg class="footer-socials__icon">
+          <a href="https://www.instagram.com/" class="footer-socials__link" target="_blank" rel="noopener noreferrer">
+            <svg class="footer-socials__icon" aria-label="Instagram">
               <use href="./img/icons.svg#instagram-icon"></use>
             </svg>
           </a>
         </li>
         <li>
-          <a href="https://www.linkedin.com/" class="footer-socials__link" target="_blank">
-            <svg class="footer-socials__icon">
+          <a href="https://www.linkedin.com/" class="footer-socials__link" target="_blank" rel="noopener noreferrer">
+            <svg class="footer-socials__icon" aria-label="LinkedIn">
               <use href="./img/icons.svg#linkedIn-icon"></use>
             </svg>
           </a>
         </li>
         <li>
-          <a href="https://www.youtube.com/" class="footer-socials__link" target="_blank">
-            <svg class="footer-socials__icon">
+          <a href="https://www.youtube.com/" class="footer-socials__link" target="_blank" rel="noopener noreferrer">
+            <svg class="footer-socials__icon" aria-label="YouTube">
               <use href="./img/icons.svg#youtube-icon"></use>
             </svg>
           </a>
@@ -51,13 +47,15 @@
       </ul>
     </div>
 
-    <!-- ========= CREDITS ========= -->
+    <!-- CREDITS -->
     <div class="footer__credits">
       <div class="footer__divider"></div>
+
       <div class="footer-contacts">
         <a href="tel:+380999091122" class="footer-contacts__link">+38 (099) 909 11 22</a>
         <a href="mailto:hello@ecotote.com" class="footer-contacts__link">hello@ecotote.com</a>
       </div>
+
       <p class="footer-copy">© 2025 EcoTote. Всі права захищені.</p>
     </div>
   </div>
