--- a/src/partials/assortment.html
+++ b/src/partials/assortment.html
@@ -1,4 +1,4 @@
-<section class="section" id="assortment">
+<section class="assortment-section" id="assortment-section">
 <div class="container">
     <h2 class="assortment-title">Наші сумки</h2>
 <ul class="assortment-list">
