--- a/src/css/feedbacks.css
+++ b/src/css/feedbacks.css
@@ -1,6 +1,13 @@
 /* СЕКЦІЯ */
 .section {
-    padding: 32px 16px;
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+/* КОНТЕЙНЕР */
+.container {
+    padding-right: 16px;
+    padding-left: 16px;
 }
 
 /* ЗАГОЛОВОК */
@@ -59,6 +66,7 @@
     letter-spacing: 0.01em;
     margin: 0 0 12px 0;
     flex-grow: 1;
+    font-family: "Comfortaa", sans-serif;
 }
 
 /* АВТОР */
@@ -71,8 +79,15 @@
 
 @media screen and (min-width: 768px) {
     /* СЕКЦІЯ */
-    .feedbacks-section {
-        padding: 64px 32px;
+    .section {
+        padding-top: 64px;
+        padding-bottom: 64px;
+    }
+
+    /* КОНТЕЙНЕР */
+    .container {
+        padding-right: 32px;
+        padding-left: 32px;
     }
 
     /* СПИСОК КАРТОК */
@@ -105,9 +120,10 @@
 }
 
 @media screen and (min-width: 1440px) {
-    /* СЕКЦІЯ */
-    .feedbacks-section {
-        padding: 64px;
+    /* КОНТЕЙНЕР */
+    .container {
+        padding-right: 64px;
+        padding-left: 64px;
     }
 
      /* ЗАГОЛОВОК */
