--- a/src/partials/feedbacks.html
+++ b/src/partials/feedbacks.html
@@ -7,27 +7,27 @@
                     <ul class="feedbacks-star-list">
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                     </ul>
@@ -42,27 +42,27 @@
                     <ul class="feedbacks-star-list">
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                     </ul>
@@ -77,27 +77,27 @@
                     <ul class="feedbacks-star-list">
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                     </ul>
@@ -112,27 +112,27 @@
                     <ul class="feedbacks-star-list">
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                         <li class="feedbacks-star-item">
                             <svg class="star-icon-without-color" width="24" height="24">
-                                <use href="../img/icons.svg#feedback-icon-filles-star"></use>
+                                <use href="/img/icons.svg#feedback-icon-filles-star"></use>
                             </svg>
                         </li>
                     </ul>
