--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
  <!-- #region about-section -->
   <main>
     <section id="#feature" class="feature">
-    <div class="container feature-container">
+    <div class="feature-container">
        <h2 class="tagline">Природність</h2>
        <h3 class="feature-title">Турбота про планету</h3>
        <p class="feature-p">Ми використовуємо органічну бавовну, перероблений пластик, льон та коноплі для наших сумок.</p>
