--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,11 +13,11 @@
       <nav class="footer-nav">
         <ul class="footer-nav__list">
           <li><a href="#about" class="footer-nav__link">Про нас</a></li>
-          <li><a href="#benefits" class="footer-nav__link">Переваги</a></li>
-          <li><a href="#products" class="footer-nav__link">Асортимент</a></li>
+          <li><a href="#advantages" class="footer-nav__link">Переваги</a></li>
+          <li><a href="#assortment-section" class="footer-nav__link">Асортимент</a></li>
           <li><a href="#gallery" class="footer-nav__link">Галерея</a></li>
-          <li><a href="#reviews" class="footer-nav__link">Відгуки</a></li>
-          <li><a href="#contacts" class="footer-nav__link">Контакти</a></li>
+          <li><a href="#feedbacks" class="footer-nav__link">Відгуки</a></li>
+          <li><a href="#support" class="footer-nav__link">Контакти</a></li>
         </ul>
       </nav>
 
