--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,11 +13,11 @@
     </a>
     <nav class="main-nav">
       <ul class="nav-link-list">
-        <li><a href="#" class="nav-link">Про нас</a></li>
-        <li><a href="#" class="nav-link">Переваги</a></li>
+        <li><a href="#feature" class="nav-link">Про нас</a></li>
+        <li><a href="#section-layout" class="nav-link">Переваги</a></li>
         <li><a href="#assortment-section" class="nav-link">Асортимент</a></li>
         <li><a href="#gallery" class="nav-link">Галерея</a></li>
-        <li><a href="#feature" class="nav-link">Відгуки</a></li>
+        <li><a href="#" class="nav-link">Відгуки</a></li>
         <li><a href="#support" class="nav-link">Контакти</a></li>
       </ul>
     </nav>
@@ -75,11 +75,11 @@
 
       <nav class="nav-list-mobile" aria-label="Мобільна навігація">
         <ul class="mobile-link-navigation-list">
-          <li><a href="#">Про нас</a></li>
-          <li><a href="#">Переваги</a></li>
+          <li><a href="#feature">Про нас</a></li>
+          <li><a href="#section-layout">Переваги</a></li>
           <li><a href="#assortment-section">Асортимент</a></li>
           <li><a href="#gallery">Галерея</a></li>
-          <li><a href="#feature">Відгуки</a></li>
+          <li><a href="#">Відгуки</a></li>
           <li><a href="#support">Контакти</a></li>
         </ul>
       </nav>
