--- a/src/css/advantages.css
+++ b/src/css/advantages.css
@@ -1,13 +1,9 @@
 .layout-section {
     padding-top: 32px;
+    padding-bottom: 32px;
 }
 .benefits-layout {
-    
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 1.5;
-    margin-top: 32px;
-    margin-bottom: 12px;
+     margin-bottom: 12px;
 }
 .title-layout {
     font-family: comfortaa, sans-serif;
@@ -63,6 +59,7 @@ object-fit: cover;
 }
 .layout-section {
 padding-top: 64px;
+padding-bottom: 64px;
 }
 
 .list-img-layout {
@@ -95,9 +92,7 @@ padding-top: 64px;
 .list-title-layout-strenght {
     margin-bottom: 42px;
 }
-.list-description-layout {
-    margin-bottom: 24px;
-}
+
 
 }
 @media screen and (min-width: 1440px) {
