last id section

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,7 +17,7 @@
         <li><a href="#section-layout" class="nav-link">Переваги</a></li>
         <li><a href="#assortment-section" class="nav-link">Асортимент</a></li>
         <li><a href="#gallery" class="nav-link">Галерея</a></li>
-        <li><a href="#" class="nav-link">Відгуки</a></li>
+        <li><a href="#feedbacks" class="nav-link">Відгуки</a></li>
         <li><a href="#support" class="nav-link">Контакти</a></li>
       </ul>
     </nav>
@@ -50,7 +50,7 @@
   </div>
 
   <!-- ===== mobile menu ===== -->
-  <div class="mobile-menu is-ope" data-menu>
+  <div class="mobile-menu is-open" data-menu>
     <div class="mobile-menu-container container">
       <a href="./index.html">
         <svg
@@ -79,7 +79,7 @@
           <li><a href="#section-layout">Переваги</a></li>
           <li><a href="#assortment-section">Асортимент</a></li>
           <li><a href="#gallery">Галерея</a></li>
-          <li><a href="#">Відгуки</a></li>
+          <li><a href="#feedbacks">Відгуки</a></li>
           <li><a href="#support">Контакти</a></li>
         </ul>
       </nav>
