--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -50,7 +50,7 @@
   </div>
 
   <!-- ===== mobile menu ===== -->
-  <div class="mobile-menu is-open" data-menu>
+  <div class="mobile-menu" data-menu>
     <div class="mobile-menu-container container">
       <a href="./index.html">
         <svg
